; ModuleID = '/home/carl/AnghaBench/freebsd/lib/libutil/extr_login_cap.c_allocarray.c'
source_filename = "/home/carl/AnghaBench/freebsd/lib/libutil/extr_login_cap.c_allocarray.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@allocarray.p = internal global i8** null, align 8
@internal_arraysz = common dso_local global i64 0, align 8
@internal_array = common dso_local global i8** null, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (i8** (i64)* @allocarray to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i8** @allocarray(i64 %0) #0 {
  %2 = alloca i64, align 8
  store i64 %0, i64* %2, align 8
  %3 = load i64, i64* %2, align 8
  %4 = load i64, i64* @internal_arraysz, align 8
  %5 = icmp ule i64 %3, %4
  br i1 %5, label %6, label %8

6:                                                ; preds = %1
  %7 = load i8**, i8*** @internal_array, align 8
  store i8** %7, i8*** @allocarray.p, align 8
  br label %17

8:                                                ; preds = %1
  %9 = load i8**, i8*** @internal_array, align 8
  %10 = load i64, i64* %2, align 8
  %11 = call i8** @reallocarray(i8** %9, i64 %10, i32 8)
  store i8** %11, i8*** @allocarray.p, align 8
  %12 = icmp ne i8** %11, null
  br i1 %12, label %13, label %16

13:                                               ; preds = %8
  %14 = load i64, i64* %2, align 8
  store i64 %14, i64* @internal_arraysz, align 8
  %15 = load i8**, i8*** @allocarray.p, align 8
  store i8** %15, i8*** @internal_array, align 8
  br label %16

16:                                               ; preds = %13, %8
  br label %17

17:                                               ; preds = %16, %6
  %18 = load i8**, i8*** @allocarray.p, align 8
  ret i8** %18
}

declare dso_local i8** @reallocarray(i8**, i64, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
